--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Midnight theme
-description: Midnight is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
-theme: jekyll-theme-midnight
+title: AI & Edge Developer Meetup
+description: Technical meetup for AI and Edge computing developers
+baseurl: "/"
+url: "https://ai-edge-meetup.github.io"
+theme: minima
